feat: implemented ollama localhost

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+.idea/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -92,6 +93,7 @@ out
 dist
 
 # Gatsby files
+.idea/
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
