--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/taqtile-us/text-generation-webui/issues"
   },
