--- a/chat-guru-demo/package.json
+++ b/chat-guru-demo/package.json
@@ -10,16 +10,20 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@xenova/transformers": "^2.6.2",
+    "auto-bind": "^5.0.1",
+    "autobind": "^1.0.3",
+    "axios": "^1.5.1",
+    "chromadb": "^1.5.11",
+    "dotenv": "^16.3.1",
+    "langchain": "^0.0.157",
+    "mobx-react-lite": "^4.0.5",
+    "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "@xenova/transformers": "^2.6.2",
-    "chromadb": "^1.5.11",
-    "dotenv": "^16.3.1",
-    "langchain": "^0.0.157",
-    "pdf-parse": "^1.1.1"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/css-modules": "^1.0.3",
+    "sass": "^1.69.0"
   }
 }
