--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chromadb": "^1.5.11",
     "dotenv": "^16.3.1",
     "langchain": "^0.0.157",
+    "mobx": "^6.10.2",
     "pdf-parse": "^1.1.1",
     "typescript": "^5.2.2"
   }
