--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "class-validator": "^0.14.0",
+    "crawler": "^1.4.0",
+    "directory-tree": "^3.5.1",
     "langchain": "^0.0.164",
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.1.13",
