--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "class-validator": "^0.14.0",
-    "crawler": "^1.4.0",
     "directory-tree": "^3.5.1",
+    "get-sitemap-links": "^1.1.0",
+    "html-to-text": "^9.0.5",
     "langchain": "^0.0.164",
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.1.13",
