--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "directory-tree": "^3.5.1",
     "get-sitemap-links": "^1.1.0",
     "html-to-text": "^9.0.5",
+    "jsdom": "^22.1.0",
     "langchain": "^0.0.164",
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.1.13",
