--- a/chat-guru-demo/package.json
+++ b/chat-guru-demo/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
