feat: added websites and txt support

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "chromadb": "^1.5.11",
     "class-validator": "^0.14.0",
+    "db": "^4.0.1",
     "directory-tree": "^3.5.1",
     "get-sitemap-links": "^1.1.0",
     "html-to-text": "^9.0.5",
