feat: migrated to new config template, added multiloader

--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "directory-tree": "^3.5.1",
     "get-sitemap-links": "^1.1.0",
     "html-to-text": "^9.0.5",
+    "ignore": "^5.2.4",
     "jsdom": "^22.1.0",
     "langchain": "^0.0.164",
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "youtube-transcript": "^1.0.6",
+    "youtubei.js": "^5.8.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
