--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.4.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "chromadb": "^1.5.11",
     "class-validator": "^0.14.0",
     "db": "^4.0.1",
@@ -34,7 +36,7 @@
     "get-sitemap-links": "^1.1.0",
     "html-to-text": "^9.0.5",
     "ignore": "^5.2.4",
-    "jsdom": "^22.1.0",
+    "jsdom": "11.5.1",
     "langchain": "^0.0.164",
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.1.13",
