--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cheerio": "^1.0.0-rc.12",
     "chromadb": "^1.5.11",
     "class-validator": "^0.14.0",
+    "crawler": "^1.4.0",
     "db": "^4.0.1",
     "directory-tree": "^3.5.1",
     "get-sitemap-links": "^1.1.0",
@@ -39,8 +40,11 @@
     "jsdom": "11.5.1",
     "langchain": "^0.0.164",
     "pdf-parse": "^1.1.1",
+    "playwright": "^1.39.0",
+    "puppeteer": "^21.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sitemapper": "^3.2.6",
     "youtube-transcript": "^1.0.6",
     "youtubei.js": "^5.8.0"
   },
@@ -48,6 +52,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/crawler": "^1.2.4",
     "@types/express": "^4.17.17",
     "@types/html-to-text": "^9.0.3",
     "@types/jest": "^29.5.2",
