--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:localdev": "NODE_ENV=localdev nest start --watch",
+    "start:remotedev": "NODE_ENV=remotedev nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -26,6 +27,7 @@
   "dependencies": {
     "@mozilla/readability": "^0.4.4",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "cheerio": "^1.0.0-rc.12",
